<package>
  <name>ros_slam</name>
  <version>0.0.1</version>
  <description>
  amov car demo
  </description>
  <author>lw bingo</author>
  <maintainer email="bingobin.lw@gmail.com">lw bingo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
