<package>
  <name>ros_navigation</name>
  <version>0.0.1</version>
  <description>
  A navigation demo of px4,with cartographer amcl
  </description>
  <author>Binog</author>
  <maintainer email="bingobin.lw@gmail.com">Chai Changkun</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>dwa_local_planner</run_depend>
</package>
